* 1차 버전 완료   - 초가 변경될때, 회전하는 기능 완료   - 분과 연동하도록 구현 중

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,42 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotating {
+  /* animation: rotating 2s linear infinite;*/
+  animation-name: rotating;
+  /* animation-duration: 30s;*/
+  animation-timing-function: linear;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+.rotate {
+  transition: all ease 1s;
+}
+
+.clock {
+  display: inline-flex;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background: red;
+}
+
+.clock > .digit {
+  width: 20px;
+  height: 20px;
+  transform-origin: center;
+}
