--- a/src/App.css
+++ b/src/App.css
@@ -58,15 +58,64 @@
 }
 
 .clock {
-  display: inline-flex;
   position: absolute;
   left: 50%;
   top: 50%;
-  background: red;
+  /* background: red;*/
+  color: #007bff;
+  display: inline-flex;
+  font-size: 36px;
 }
 
 .clock > .digit {
-  width: 20px;
-  height: 20px;
+  width: 48px;
+  height: 48px;
   transform-origin: center;
+  line-height: 48px;
+  text-align: center;
+}
+
+.digit.triangle {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -3px;
+  margin-left: 50%;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 3px 6px 3px;
+  border-color: transparent transparent #007bff transparent;
+}
+
+.border-outer {
+  overflow: hidden;
+  width: 48px;
+  height: 48px;
+  padding: 2px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  position: absolute;
+  box-sizing: border-box;
+  z-index: -1;
+}
+
+.border-outer .border-inner,
+.border:after {
+  border-radius: 50%;
+  width: calc(100% - 0.3em);
+  height: calc(100% - 0.3em);
+}
+
+.border-outer .border-inner {
+  margin: 0 auto;
+  font-size: 10px;
+  /* position: relative;
+  text-indent: -9999em;*/
+  border-top: 0.15em solid #007bff;
+  border-right: 0.15em solid rgba(118, 118, 118, 0.3);
+  border-bottom: 0.15em solid rgba(118, 118, 118, 0.3);
+  border-left: 0.15em solid rgba(118, 118, 118, 0.3);
+  /* transform: translateZ(0);
+  animation: load8 1.1s infinite linear; */
 }
