--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@
   text-align: center;
 }
 
-.digit.triangle {
+.digit:after {
   content: "";
   position: absolute;
   top: 0;
@@ -112,9 +112,9 @@
   font-size: 10px;
   /* position: relative;
   text-indent: -9999em;*/
-  border-top: 0.15em solid #007bff;
+  border-top: 0.15em solid rgba(118, 118, 118, 0.3);
   border-right: 0.15em solid rgba(118, 118, 118, 0.3);
-  border-bottom: 0.15em solid rgba(118, 118, 118, 0.3);
+  border-bottom: 0.15em solid #007bff;
   border-left: 0.15em solid rgba(118, 118, 118, 0.3);
   /* transform: translateZ(0);
   animation: load8 1.1s infinite linear; */
